--- a/variables.env
+++ b/variables.env
@@ -1,3 +1,9 @@
+#
+# !/bin/bash
+# kind cluster installation main program
+# Version : April 26, 2024
+# Author : mariefdu45@gmail.com
+#
 HELM_VERSION=v3.14.4
 DOCKER_VERSION=5:26.1.0-1~ubuntu.22.04~jammy
 KIND_VERSION=v0.22.0
